<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>e-commerce-cloud</artifactId>
        <groupId>net.arver.commerce</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>e-commerce-common</artifactId>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>

    <build>
        <finalName>${artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <executions>
                    <execution>
                        <id>checkstyle-validation</id>
                        <phase>validate</phase>
                        <inherited>true</inherited>
                        <configuration>
                            <skip>${disable.checks}</skip>
                            <configLocation>${checkstyle.file}</configLocation>
                            <headerLocation>${checkstyle.header.file}</headerLocation>
                            <propertyExpansion>
                                checkstyle.build.directory=${project.build.directory}
                                checkstyle.suppressions.file=${checkstyle.suppressions.file}
                            </propertyExpansion>
                            <consoleOutput>true</consoleOutput>
                            <includeTestSourceDirectory>
                                ${maven-checkstyle-plugin.includeTestSourceDirectory}
                            </includeTestSourceDirectory>
                            <failsOnError>
                                ${maven-checkstyle-plugin.failsOnError}
                            </failsOnError>
                            <failOnViolation>
                                ${maven-checkstyle-plugin.failOnViolation}
                            </failOnViolation>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>